--- a/project/src/main/res/layout/fragment_flight_search_params.xml
+++ b/project/src/main/res/layout/fragment_flight_search_params.xml
@@ -89,6 +89,8 @@
                 android:id="@id/num_travelers_container"
                 android:layout_width="52dp"
                 android:layout_height="48dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:addStatesFromChildren="true"
                 android:layout_alignParentRight="true">
 
                 <ImageButton
@@ -96,7 +98,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/ab_spinner"
+                    android:background="?attr/skin_actionBarSpinnerBackground"
                     android:contentDescription="@string/cd_flights_search_number_of_travelers_edit"
                     android:padding="0dp"
                     android:src="@drawable/ic_traveler_picker"/>
