--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -24,9 +24,11 @@
     <string name="facebook_app_id">131538103586818</string>
 
     <!-- Lean Plum SDK -->
-    <string name="lean_plum_sdk_app_id">iP8YMOTxnTNTBS7oclci3OIxWAKL8hXJyx84GepS09s</string>
+    <string name="lean_plum_sdk_dev_appid">iP8YMOTxnTNTBS7oclci3OIxWAKL8hXJyx84GepS09s</string>
     <string name="lean_plum_sdk_dev_key">nKAaL3XpW5WsFx8kv8UjvDRjtYD0C3jGPDLSIamlFZ4</string>
-    <string name="lean_plum_sdk_prod_key">nElB5Kk7BcxwNJh0ytOoczAcYgRBdcjcTNQWZRWNIZ0</string>
+
+    <string name="lean_plum_sdk_prod_appid">xKlVSadJbLLqOI2ox80QLZQ5IBec4VRggWTjdpuQQAk</string>
+    <string name="lean_plum_sdk_prod_key">tCIe8ebANwhOqDWxLtscOmvONeW7OGR4f91hm8rT1cg</string>
 
     <!-- Default AccountManager token -->
     <string name="expedia_account_token_type_tuid_identifier">expedia.tuid</string>
