3496. Stored Travelers List Popup in checkout overview. Part1
Adding the "Saved" button for when user is logged in to help bring up the list of saved travelers.
Adding the ListPopupWindow.
On selecting any of the travelers from the list item, let's start a download to fetch the traveler details.
Added a new field "mIsSelectable" to Traveler object. This field is used to indicate if the traveler can be selected from the list or if it's grey-ed out (disabled).

--- a/project/src/main/res/layout-sw600dp/section_flight_display_traveler_info_btn.xml
+++ b/project/src/main/res/layout-sw600dp/section_flight_display_traveler_info_btn.xml
@@ -5,7 +5,8 @@
     android:gravity="center_vertical"
     android:paddingTop="2.5dp"
     android:paddingBottom="5.5dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:addStatesFromChildren="false" >
 
     <ImageView
         android:id="@+id/display_picture"
@@ -47,6 +48,24 @@
             android:textColor="@color/data_review_grey"
             android:textSize="@dimen/tablet_data_button_sub_text_size" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/saved_traveler_fake_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_weight="0"
+        android:text="Saved"/>
+
+    <Button
+        android:id="@+id/edit_traveler_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_weight="0"
+        android:text="Edit"/>
 
     <ImageView
         android:id="@+id/validation_checkmark"
