UI tweaks for air attach search results (3512, 3586)
- price text on phone search results is now orange when air attach
qualified

- tablet hotel search results using new asset for price change
background

--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -100,7 +100,8 @@
     <!-- So that we can define this in the layout xml rather than in code -->
     <declare-styleable name="hotel_summary_section">
         <attr name="selectedBackground" format="color|reference" />
-        <attr name="salePriceTextColor" format="color" />
+        <attr name="salePriceTextColor" format="color"/>
+        <attr name="airAttachPriceTextColor" format="color"/>
         <attr name="priceTextColor" format="color" />
     </declare-styleable>
 
