--- a/project/src/main/res/layout/itin_air_attach_card.xml
+++ b/project/src/main/res/layout/itin_air_attach_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="8dp"
@@ -40,7 +41,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/itin_orange_curve"/>
+                android:src="@drawable/itin_orange_curve" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
