--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -107,6 +107,7 @@
     <color name="hotel_cell_secondary_color">#a6a6a6</color>
     <color name="hotel_price_text_color">#064192</color>
     <color name="hotel_price_sale_text_color">#00b277</color>
+    <color name="hotel_price_air_attach_text_color">#fd8126</color>
     <color name="bg_row_state_pressed">#f0f0f0</color>
     <color name="bg_user_rating_button_pressed">#b4f0f0f0</color>
     <color name="bg_tablet_button_state_pressed">#cccccc</color>
