--- a/project/src/main/res/layout-sw600dp/section_hotel_display_traveler_info_btn.xml
+++ b/project/src/main/res/layout-sw600dp/section_hotel_display_traveler_info_btn.xml
@@ -40,23 +40,13 @@
             android:textSize="@dimen/tablet_data_button_sub_text_size" />
     </LinearLayout>
 
-    <Button
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/saved_traveler_fake_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="0"
-        android:text="Saved"/>
+        style="@style/CheckoutTravelerPaymentButton.Saved"/>
 
-    <Button
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/edit_traveler_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="0"
-        android:text="Edit"/>
+        style="@style/CheckoutTravelerPaymentButton.Edit"/>
 
     <ImageView
         android:id="@+id/validation_checkmark"
