--- a/project/src/main/res/values-sw600dp/styles.xml
+++ b/project/src/main/res/values-sw600dp/styles.xml
@@ -104,4 +104,30 @@
         <item name="android:layout_marginTop">@dimen/gde_tool_tip_button_margin_top</item>
     </style>
 
+    <style name="CheckoutTravelerPaymentButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_weight">0</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">13dp</item>
+        <item name="textStyle">medium</item>
+        <item name="android:textColor">#323232</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/bg_tablet_confirmation_actionbutton</item>
+    </style>
+
+    <style name="CheckoutTravelerPaymentButton.Saved">
+        <item name="android:text">@string/saved_button</item>
+        <item name="android:drawableRight">@drawable/saved_traveler_fake_spinner</item>
+    </style>
+
+    <style name="CheckoutTravelerPaymentButton.Edit">
+        <item name="android:text">@string/edit_button</item>
+        <item name="android:drawableRight">@drawable/edit_pencil</item>
+    </style>
+
 </resources>
