3636: Consolidated clickable row backgronds on phone and tablet

--- a/project/src/main/res/layout/fragment_hotel_details_intro.xml
+++ b/project/src/main/res/layout/fragment_hotel_details_intro.xml
@@ -71,8 +71,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/bg_clickable_row"
             android:drawableLeft="@drawable/ic_good_rating"
             android:drawablePadding="8dp"
+            android:contentDescription="@string/cd_hotel_info_go_to_hotel_reviews"
             android:gravity="left|center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
@@ -92,6 +94,8 @@
             android:id="@+id/user_review_layout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/bg_clickable_row"
+            android:addStatesFromChildren="true"
             android:contentDescription="@string/cd_hotel_info_go_to_hotel_reviews"
             android:gravity="center"
             android:orientation="vertical"
