--- a/project/src/main/res/layout-land/hotel_details_main.xml
+++ b/project/src/main/res/layout-land/hotel_details_main.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#262626"
+    android:background="@color/bg_hotel_details_mini_gallery"
     android:orientation="horizontal" >
 
     <FrameLayout
@@ -32,7 +32,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#efefef"
+                android:background="@color/bg_row_state_default"
                 android:orientation="vertical" >
 
                 <FrameLayout
@@ -56,13 +56,13 @@
                     android:id="@+id/hotel_details_description_fragment_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#efefef"
+                    android:background="@color/bg_row_state_default"
                     android:minHeight="100dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#efefef"
+                    android:background="@color/bg_row_state_default"
                     android:orientation="vertical"
                     android:paddingBottom="8dp"
                     android:paddingLeft="8dp"
