--- a/project/src/main/res/layout/hotel_details_main.xml
+++ b/project/src/main/res/layout/hotel_details_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/hotel_details_mini_gallery_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#262626" />
+            android:background="@color/bg_hotel_details_mini_gallery" />
 
         <FrameLayout
             android:id="@+id/hotel_details_price_promo_fragment_container"
@@ -23,11 +23,11 @@
             android:layout_height="@dimen/promo_banner_height"
             android:layout_marginTop="@dimen/hotel_details_intro_offset" />
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/hotel_details_intro_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#efefef" />
+            android:background="@color/bg_row_state_default" />
 
         <FrameLayout
             android:id="@+id/hotel_details_map_fragment_outer_container"
@@ -42,13 +42,13 @@
             android:id="@+id/hotel_details_description_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#efefef"
+            android:background="@color/bg_row_state_default"
             android:minHeight="100dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#efefef"
+            android:background="@color/bg_row_state_default"
             android:orientation="vertical"
             android:paddingBottom="8dp"
             android:paddingLeft="8dp"
