--- a/project/src/main/res/layout/section_hotel_summary.xml
+++ b/project/src/main/res/layout/section_hotel_summary.xml
@@ -3,7 +3,7 @@
     xmlns:mobiata="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/bg_row"
+    android:background="@drawable/bg_clickable_row"
     mobiata:priceTextColor="?attr/skin_hotelPriceStandardColor"
     mobiata:salePriceTextColor="?attr/skin_hotelPriceSaleColor"
     mobiata:selectedBackground="@drawable/bg_row_selected" >
