--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -108,8 +108,9 @@
     <color name="hotel_price_text_color">#064192</color>
     <color name="hotel_price_sale_text_color">#00b277</color>
     <color name="hotel_price_air_attach_text_color">#fd8126</color>
+    <color name="bg_hotel_details_mini_gallery">#262626</color>
+    <color name="bg_row_state_default">#ffffff</color>
     <color name="bg_row_state_pressed">#f0f0f0</color>
-    <color name="bg_user_rating_button_pressed">#b4f0f0f0</color>
     <color name="bg_tablet_button_state_pressed">#cccccc</color>
     <color name="bg_payment_row_state_pressed">#33000000</color>
     <color name="text_shadow_color">#a5ffffff</color>
