--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- VSC app name for the about screen-->
+    <string name="vsc_full_app_name">Agence Voyages-sncf Hôtels</string>
+
+    <string name="app_name">Hôtel Voyages-sncf</string>
+    <string name="app_vsc_info_url">http://www.voyages-sncf.com</string>
+    <string name="country_vs">VSC</string>
 
     <!-- Facebook -->
     <!-- Production Facebook app id -->
@@ -9,8 +15,6 @@
     <string name="calendar_date_picker_date_format_vsc">dd MMM</string>
     <string name="hotel_receipt_cancellation_policy_date_format_vsc">"k'h'mm, MMM dd"</string>
 
-    <!-- For app launcher name -->
-    <string name="launcher_name">@string/vsc_app_name</string>
     <!-- Email addresses -->
     <string name="email_app_support">vsc-android@mobiata.com</string>
     <!-- User name label for support email sent to user happiness team -->
