3636: Fixed scrollbar position on user reviews list
Also, consolidated tablet and phone fragment_user_review_list

--- a/project/src/main/res/values-sw600dp/dimens.xml
+++ b/project/src/main/res/values-sw600dp/dimens.xml
@@ -183,6 +183,7 @@
 
     <!-- Tablet User review dimens -->
     <dimen name="user_review_text_padding_right">32dp</dimen>
+    <dimen name="row_user_review_horizontal_padding">32dp</dimen>
 
     <!-- Hotel/Flight/Tripbucket Card dimensions -->
     <dimen name="hotel_flight_card_height">120dp</dimen>
