--- a/project/src/main/res/layout/row_user_review.xml
+++ b/project/src/main/res/layout/row_user_review.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="27dp" >
+    android:paddingTop="27dp"
+    android:paddingLeft="@dimen/row_user_review_horizontal_padding"
+    android:paddingRight="@dimen/row_user_review_horizontal_padding">
 
     <View
         android:id="@+id/user_review_separator"
