Add comment for VSC resource so we don't remove it
And add lint ignore so it won't complain about it

--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- VSC app name for the about screen-->
     <string name="vsc_full_app_name">Agence Voyages-sncf Hôtels</string>
 
     <string name="app_name">Hôtel Voyages-sncf</string>
     <string name="app_vsc_info_url">http://www.voyages-sncf.com</string>
-    <string name="country_vs">VSC</string>
+
+    <!-- The PointOfSale code looks this identifier up with reflection, do not remove! -->
+    <string tools:ignore="UnusedResources" name="country_vs">VSC</string>
 
     <!-- Facebook -->
     <!-- Production Facebook app id -->
