--- a/project/src/travelocity/res/values/donottranslate.xml
+++ b/project/src/travelocity/res/values/donottranslate.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Travelocity</string>
-
     <!-- Tracking tags -->
     <string name="google_analytics_ua">UA-17383042-20</string>
+
+    <!-- For app launcher name -->
+    <string name="launcher_name">@string/travelocity_app_name</string>
     <!-- Email addresses -->
     <string name="email_app_support">travelocity-android@mobiata.com</string>
     <!-- User name label for support email sent to user happiness team -->
