Air Attach Changes for Hotel Map and Room Rate Screen.

--- a/project/src/main/res/layout-land/fragment_hotel_details_price_promo.xml
+++ b/project/src/main/res/layout-land/fragment_hotel_details_price_promo.xml
@@ -35,11 +35,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?attr/skin_hotelDetailSaleRibbonDrawable"
-                android:gravity="center"
-                android:paddingLeft="10dp"
-                android:paddingRight="20dp"
-                android:textColor="@color/price_promo_banner_text_color"
-                android:textStyle="bold" />
+                style="@style/BannerTextView" />
+
+            <TextView
+                android:id="@+id/air_attach_banner_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/skin_hotelDetailAirAttachRibbonDrawable"
+                style="@style/BannerTextView"
+                android:visibility="gone" />
+
         </LinearLayout>
 
         <LinearLayout
