--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -80,6 +80,7 @@
         <!-- Custom attrs for Expedia/VSC switching -->
         <item name="skin_hotelPriceStandardColor">@color/hotel_price_text_color</item>
         <item name="skin_hotelPriceSaleColor">@color/hotel_price_sale_text_color</item>
+        <item name="skin_hotelPriceAirAttachColor">@color/hotel_price_air_attach_text_color</item>
         <item name="skin_hotelSearchActionBarPadding">0dp</item>
         <item name="skin_webViewPreferencesActionBarLogo">@drawable/ic_action_bar_expedia_logo</item>
         <item name="skin_webViewPreferencesActionBarLogoWithTitle">@drawable/ic_action_bar_expedia_logo_small</item>
@@ -94,7 +95,9 @@
         <item name="skin_calendarDatePickerDateFormat">@string/calendar_date_picker_date_format</item>
         <item name="skin_hotelCancellationPolicyDateFormat">@string/hotel_receipt_cancellation_policy_date_format</item>
         <item name="skin_hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale</item>
+        <item name="skin_hotelDetailAirAttachRibbonDrawable">@drawable/bg_sale_airattach_ribbon</item>
         <item name="skin_hotelDetailSaleRibbonDrawable">@drawable/bg_sale_ribbon</item>
+        <item name="skin_roomsRatesAirAttachRibbonDrawable">@drawable/rooms_rates_airattach_ribbon</item>
         <item name="skin_roomsRatesSaleRibbonDrawable">@drawable/rooms_rates_ribbon</item>
         <item name="skin_hotelListingUserRatingStyle">@style/RatingBar.UserReview.Yellow</item>
         <item name="skin_hotelListingSortPriceDrawable">@drawable/ic_sort_price</item>
@@ -127,6 +130,7 @@
         <item name="skin_tabletCheckoutLoginButtonTextColor">@color/login_text_tablet</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
         <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_expedia_white_logo_small</item>
+        <item name="skin_hotelListMapMarkerAirAttachDrawable">@drawable/map_pin_airattach</item>
         <item name="skin_hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
         <item name="skin_hotelListMapMarkerDrawable">@drawable/map_pin_normal</item>
         <item name="skin_hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder</item>
