--- a/project/src/main/res/layout/snippet_trip_bucket_expanded_price.xml
+++ b/project/src/main/res/layout/snippet_trip_bucket_expanded_price.xml
@@ -9,10 +9,10 @@
         android:orientation="horizontal" >
 
         <com.expedia.bookings.widget.TextView
+            android:id="@+id/total_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="@string/total_with_tax"
             android:textColor="#444444"
             android:textSize="16sp"
             app:textStyle="light" />
