--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -122,7 +122,7 @@
         <item name="skin_hotelDetailPlaceHolderDrawable">@drawable/placeholder_lg</item>
         <item name="skin_hotelConfirmationCallActionDrawable">@drawable/ic_phone</item>
         <item name="skin_hotelConfirmationCallActionText">@string/call_expedia_customer_support</item>
-        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/ic_log_in</item>
+        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/ic_log_in</item>
         <item name="skin_hotelCheckoutLoginButtonText">@string/Log_in_with_Expedia</item>
         <item name="skin_phoneCheckoutLoginButtonDrawable">@drawable/btn_login_hotels</item>
