--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -36,7 +36,7 @@
         <item name="skin_loginWithExpediaTitleText">@string/vsc_account</item>
         <item name="skin_hotelDetailPlaceHolderDrawable">@drawable/placeholder_lg_vsc</item>
         <item name="skin_hotelConfirmationCallActionDrawable">@null</item>
-        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/ic_vsc_logo</item>
+        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/ic_log_out_vsc</item>
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/ic_log_in_vsc</item>
         <item name="skin_hotelCheckoutLoginButtonText">@string/hotel_checkout_logIn_button_text</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_vsc</item>
