--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -58,4 +58,37 @@
     <!-- Inherit EB or VSC theme based on desired project -->
     <style name="Theme.Phone" parent="@style/Theme.VSC"/>
 
+    <style name="FlightTheme" parent="@style/Theme.VSC">
+        <item name="airPickerBackground">@android:color/white</item>
+        <item name="airPickerHeaderBackground">@android:color/white</item>
+        <item name="airPickerTextColor">@android:color/black</item>
+        <item name="airPickerMessageTextColor">@android:color/black</item>
+        <item name="airPickerActionTextColor">@android:color/black</item>
+        <item name="rowDividerBackground">@android:color/black</item>
+        <item name="rowBackground">@android:color/white</item>
+        <item name="rowHeaderBackground">@android:color/white</item>
+        <item name="android:dropDownListViewStyle">@style/DropDownListView</item>
+        <item name="android:logo">@drawable/ic_logo_vsc</item>
+        <item name="android:actionBarStyle">@style/FlightActionBarVSC</item>
+        <item name="android:actionMenuTextColor">@color/action_bar_flight_text_color</item>
+        <item name="android:actionModeCloseDrawable" >@drawable/btn_navigation_cancel</item>
+        <item name="android:editTextStyle">@style/Widget.EditText.Phone</item>
+        <item name="android:spinnerStyle">@style/Widget.Spinner.Phone.Flights</item>
+        <item name="android:autoCompleteTextViewStyle">@style/Widget.AutoComplete</item>
+        <item name="skin_travelerLabelOnCheckout">@string/Add_Traveler</item>
+        <item name="skin_flightCalendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell_vsc</item>
+        <item name="skin_flightCalendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup_orange</item>
+        <item name="skin_flightCheckoutAccountLabel">@string/vsc_account</item>
+    </style>
+
+    <style name="FlightActionBarVSC" parent="FlightActionBar">
+        <item name="android:background">@drawable/bg_action_bar_vsc</item>
+        <item name="android:backgroundSplit" >@drawable/bg_action_bar_flight_bottom</item>
+    </style>
+
+    <style name="FlightActionBar" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background" >@drawable/bg_action_bar_vsc</item>
+        <item name="android:backgroundSplit">@drawable/bg_action_bar_flight_bottom</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+    </style>
 </resources>
