--- a/project/src/voyages/res/layout/flight_loading_status.xml
+++ b/project/src/voyages/res/layout/flight_loading_status.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/search_progress_flight_vsc"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="60dp"
+        android:src="@drawable/search_progress_static_flight_vsc" />
 
-</LinearLayout>
+</merge>
