--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -167,6 +167,7 @@
         <item name="skin_addToCalenderMessage">@string/contact_phone_template_aag</item>
         <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_aag</item>
         <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_aag</item>
+        <item name="skin_itineraryNumberString">@string/aag_itinerary</item>
     </style>
 
     <style name="LaunchActionBarTabAirAsiaGoStyle" parent="@android:style/Widget.Holo.ActionBar.TabView">
