--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -194,6 +194,7 @@
 
     <attr name="skin_loadingAirAsiaRoutesString" format="reference|string" />
     <attr name="skin_emailUserNameString" format="reference|string" />
+    <attr name="skin_itineraryNumberString" format="string" />
 
     <!-- Room not Available Error Msg-->
     <attr name="skin_roomNotAvailableError" format="string"/>
