--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -91,4 +91,35 @@
         <item name="android:backgroundSplit">@drawable/bg_action_bar_flight_bottom</item>
         <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
     </style>
+
+    <style name="LaunchTheme" parent="@android:style/Theme.Holo">
+        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:actionBarStyle">@style/LaunchActionBar</item>
+        <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
+        <item name="skin_flightLineColor">@color/flight_trip</item>
+        <item name="android:actionOverflowButtonStyle">@style/Widget.ActionBar.ActionButton.Overflow</item>
+
+        <!-- PopupMenu -->
+        <item name="android:dropDownListViewStyle">@android:style/Widget.Holo.Light.ListView.DropDown</item>
+        <item name="skin_logoutConfirmationString">@string/logout_confirmation</item>
+        <item name="skin_itinActivityPlaceholderDrawable">@drawable/itin_header_placeholder_activities</item>
+        <item name="skin_itinCarPlaceholderDrawable">@drawable/default_flights_background</item>
+        <item name="skin_itinCruisePlaceholderDrawable">@drawable/itin_header_placeholder_cruises</item>
+        <item name="skin_itinHotelPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="skin_itinFlightPlaceholderDrawable">@drawable/bg_itin_placeholder_flight</item>
+        <item name="skin_itinDefaultPlaceholderDrawable">@drawable/bg_itin_fallback_activity</item>
+        <item name="skin_itinCardTitleBackground">@drawable/bg_itin_card_title</item>
+        <item name="skin_itinCardBackground">@drawable/bg_itin_card</item>
+        <item name="skin_itinFlightsTripLineColor">@color/itin_flight_line_color</item>
+        <item name="skin_itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
+        <item name="skin_itinDismissListSelectorDrawable">?android:attr/selectableItemBackground</item>
+        <item name="skin_candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal</item>
+        <item name="skin_icTypeCircleFlight">@drawable/ic_type_circle_flight</item>
+        <item name="skin_icTypeCircleHotel">@drawable/ic_type_circle_hotel</item>
+        <item name="skin_addToCalenderMessage">@string/contact_phone_template</item>
+        <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE</item>
+        <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE</item>
+        <item name="skin_itineraryNumberString">@string/vsc_itinerary</item>
+    </style>
+
 </resources>
