--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -50,9 +50,37 @@
         <item name="skin_aboutInfoUrlString">@string/app_vsc_info_url</item>
         <item name="skin_aboutAppNameString">@string/vsc_full_app_name</item>
         <item name="skin_aboutAppLogoDrawable">@drawable/ic_voyages_sncf</item>
+        <item name="skin_aboutWebsiteString">@string/vsc_website</item>
         <item name="skin_emailUserNameString">@string/email_user_name_vsc</item>
         <item name="skin_userRatingBarDrawable">@drawable/ratingbar_userreview_orange</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure_vsc</item>
+        <item name="skin_loginWithExpediaContentDescription">@string/cd_checkout_log_in_with_vsc</item>
+        <item name="skin_costSummaryBookingFeesString">@string/vsc_booking_fee</item>
+        <item name="skin_hotelConfirmationCallActionText">@string/call_vsc_customer_support</item>
+        <item name="skin_logoutConfirmationString">@string/logout_confirmation_vsc</item>
+        <item name="skin_flightUnhandledErrorMessage">@string/error_flight_unhandled_TEMPLATE_vsc</item>
+        <item name="skin_serverErrorMessageString">@string/error_server_vsc</item>
+        <item name="skin_savePaymentToAccountString">@string/save_billing_info_message_vsc</item>
+        <item name="skin_saveTravelerToAccountString">@string/save_traveler_message_TEMPLATE_vsc</item>
+        <item name="skin_infoContactUsString">@string/contact_vsc_via</item>
+        <item name="skin_infoContactEmailSubjectString">@string/contact_vsc_email_subject</item>
+        <item name="skin_singleFlightNotAvailableError">@string/error_flight_no_longer_available_vsc</item>
+        <item name="skin_flightsNotAvailableError">@string/error_flights_no_longer_available_vsc</item>
+        <item name="skin_clearPrivateDataMsg">@string/dialog_message_logged_out_and_cleared_private_data_vsc</item>
+        <item name="skin_hotelSearchResultNotAvailale">@string/not_currently_available_vsc</item>
+        <item name="skin_hotelSearchResultSoldOut">@string/sold_out_on_vsc</item>
+        <item name="skin_hotelSearchResultTEMPLATE">@string/not_currently_available_vsc_TEMPLATE</item>
+        <item name="skin_addToCalenderMessage">@string/contact_phone_template_vsc</item>
+        <item name="skin_sorryRoomsSoldOut">@string/sorry_rooms_sold_out_vsc</item>
+        <item name="skin_passwordHint">@string/vsc_password_hint</item>
+        <item name="skin_loadingAccount">@string/loading_vsc_account</item>
+        <item name="skin_restrictedProfileLoginMessage">@string/restricted_profile_login_message_vsc</item>
+        <item name="skin_tellAFriendSubject">@string/tell_a_friend_subject_vsc</item>
+        <item name="skin_tellAFriendBody">@string/tell_a_friend_body_vsc</item>
+        <item name="skin_dialogMessageLaunchMobileSite">@string/dialog_message_launch_vsc_mobile_site</item>
+        <item name="skin_calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_vsc</item>
+        <item name="skin_calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_vsc</item>
+        <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_vsc</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
